--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- My Style -->
+
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
       rel="stylesheet"
@@ -39,14 +40,12 @@
 
     <!-- header -->
     <header>
-      <h1>HIAHOIHSAOHDWIHDODHOAIH</h1>
-      <p>
-        AIUYHIUAHWIDUHAIUHWDIAUHIDWUHIDAUHIDUHWAIUDHIAUHIDWUHIDHAIUDHWAIDHIAWUDHIAWUDHIWAUH
-      </p>
-      <h1 class="nano">Hi Bro,Welcome To My Website</h1>
-      <h4>Ini adalah web latihan pertamaku</h4>
-      <img src="assets/img/5.jpg" />
-      <hr />
+      <div class="container">
+        <div class="header-judul">
+          <h1>Halo <span id="username"></span>, Welcome To My Website</h1>
+          <p>Ini adalah website latihan yang ke-banyak saya hehe.</p>
+        </div>
+      </div>
     </header>
     <!-- header -->
 
