--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="container">
         <div class="header-judul">
           <h1>Halo <span id="username"></span>, Welcome To My Website</h1>
-          <p>Ini adalah website latihan yang ke-banyak saya hehe.</p>
+          <p>Ini adalah website latihan pertama saya.</p>
         </div>
       </div>
     </header>
